--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <script>
-    console.log("Hello World!");
-    // single line comment
-    
-    /* multi
-    lines
-    comment */
+    /*
+    * Data Types:
+    * undefined, null, boolean, string, symbol, number, and object
+    * */
+
+    var myName = "Tony";
+    myName = 8;
+
+    let ourName = "Stark";
+
+    const pi = 3.14;
+
+
 </script>
