--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <script>
-    /*
-    * Data Types:
-    * undefined, null, boolean, string, symbol, number, and object
-    * */
-
-    var myName = "Tony";
-    myName = 8;
-
-    let ourName = "Stark";
-
-    const pi = 3.14;
+    var a = 9;
 
 
 </script>
