--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <script>
-    var a = 9;
+    // Initialize these 3 variables
+    var a = 1;
+    var b = 2;
+    var c = "This is";
+
+    // Do not change code below this line
+    a = a +1;
+    b = b + 5;
+    c = c + " String";
+    
+    // console log
+    console.log(a);
+    console.log(b);
+    console.log(c);
 
 
 </script>
