--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <script>
-    // Initialize these 3 variables
-    var a = 1;
-    var b = 2;
-    var c = "This is";
+// Declarations
+// var StUdLyCapVar;
+// var properCamelCase;
+// var TitleCaseOver;
 
-    // Do not change code below this line
-    a = a +1;
-    b = b + 5;
-    c = c + " String";
-    
-    // console log
-    console.log(a);
-    console.log(b);
-    console.log(c);
+// correct declaration
+var studlyCapVar;
+var properCamelCase;
+var titleCaseOver;
 
+// Assigment
+// STUDLYCAPVAR = 10;
+// PRoperCAmelCAse = "A String";
+// tITLEcASEoVER = 9000;
+
+// correct assignment
+studlyCapVar = 10;
+properCamelCase = "A String";
+titleCaseOver = 9000;
 
 </script>
